Refactor del codice e commenti seguendo javadoc